<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthScreenActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/txtQuestion3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Nội dung câu hỏi số 3 ..."
            android:textSize="30dp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="Câu 1"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/txt_2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="Câu 2"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/txt_3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="Câu 3"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/sp1"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:prompt="@string/spinner1_prompt"
                    android:entries="@array/spinner1"
                    android:layout_marginLeft="40dp"/>

                <Spinner
                    android:id="@+id/sp3"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:prompt="@string/spinner2_prompt"
                    android:entries="@array/spinner2"
                    android:layout_marginLeft="40dp"/>

                <Spinner
                    android:id="@+id/sp2"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:prompt="@string/spinner3_prompt"
                    android:entries="@array/spinner3"
                    android:layout_marginLeft="40dp"/>
            </LinearLayout>
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnPre"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/colorYellow"
            android:text="@string/btnPrevious"
            android:textSize="25sp" />


        <Button
            android:id="@+id/btnResult"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/colorYellow"
            android:text="Result"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/colorYellow"

            android:text="@string/btnNext"
            android:textSize="25sp" />
    </TableRow>
</LinearLayout>